# bat-cat

./: .gitignore  Justfile  README.md  __init__.py  _build.py  app.py  planets.py  pyproject.toml  tildagon.toml
.github/workflows/: ci.yml  publish.yml
apps/cat_yarn/: app.py  cats.py  metadata.json  probe.py  tildagon.toml
docs/: PROPOSAL-2-template-devkit-cat-app.md  PROPOSAL.md
docs/research/: 01-hardware.md  02-app-model.md  03-input.md  04-sensors-and-peripherals.md  05-toolchain.md  06-publishing.md  07-ecosystem.md  08-verification-log.md  09-cat-app-feasibility.md  10-power-probe.md
libs/spmono/: __init__.py
libs/spmono/engine/: physics.py
libs/spmono/input/: actions.py
libs/spmono/sensors/: battery.py  motion.py
libs/spmono/theme/: __init__.py
libs/spmono/util/: assets.py
spmono/: __init__.py
spmono/engine/: physics.py  sprite.py  statemachine.py
spmono/flags/: __init__.py
spmono/input/: actions.py
spmono/ui/: baseapp.py
tests/: conftest.py  test_battery.py  test_cats.py  test_motion.py  test_physics.py  test_planets.py  test_sprite.py  test_theme_flags_input.py
tools/: check_manifests.py  deploy.py  gen_cat_sprites.py  gen_planet_sprites.py  power_probe.py  publish_plan.py  publish_prep.py  sim.py  vendor.py
